--- a/css/custom.css
+++ b/css/custom.css
@@ -611,3 +611,9 @@ p:last-child {
 .type-select {
     margin-bottom: 3px;
 }
+
+.treatment-relations .dropdowns {
+    padding-left: 0;
+    padding-right: 0;
+    text-align: right;
+}
