--- a/js/templates/treatment-entry.tpl.html
+++ b/js/templates/treatment-entry.tpl.html
@@ -2,7 +2,7 @@
     <div class="entry-toolbar"  ng-show="entry.focused">
         <div class="row">
             <div class="col-xs-12">
-                <div class="btn-group"><a href class="btn btn-default" ng-click="dc.showFixtextWidget(true) "><i class="fa fa-list-alt"></i></a></div>
+                <div class="btn-group"><a href class="btn btn-default" ng-click="dc.showTextBlockWidget(true, entry.type) "><i class="fa fa-list-alt"></i></a></div>
             </div>
         </div>
     </div>
