--- a/js/templates/treatment-toolbar.tpl.html
+++ b/js/templates/treatment-toolbar.tpl.html
@@ -82,7 +82,7 @@
                                     class="fa fa-check" ng-show="fontSetting=='large-fonts'">&nbsp;</i></span>
                                 Grosse Schrift</a></li>
                             <li class="divider"></li>
-                            <li><a href ng-click="toolbar.showTitleSettingsWidget(true);toolbar.showFixtextWidget(true)">Titel zeigen</a></li>
+                            <li><a href ng-click="toolbar.showTitleSettingsWidget(true)">Titel zeigen</a></li>
                         </ul>
                     </div>
                 </div>
