--- a/js/templates/textblock-widget.tpl.html
+++ b/js/templates/textblock-widget.tpl.html
@@ -1,4 +1,4 @@
-<div class="textblock-widget col-xs-6" ng-show="dc.isVisible()" ng-cloak draggable
+<div class="textblock-widget achilles-widget col-xs-6" ng-show="dc.isVisible()" ng-cloak draggable
      draggable-handle=".panel-heading">
     <div class="panel panel-default">
         <div class="panel-heading">
