--- a/js/templates/title-settings-widget.tpl.html
+++ b/js/templates/title-settings-widget.tpl.html
@@ -1,4 +1,4 @@
-<div class="title-settings-widget" ng-show="dc.isVisible()" ng-cloak draggable draggable-handle=".panel-heading">
+<div class="title-settings-widget achilles-widget" ng-show="dc.isVisible()" ng-cloak draggable draggable-handle=".panel-heading">
     <div class="panel panel-default">
         <div class="panel-heading">
             Titel anzeigen
