--- a/js/templates/treatment.tpl.html
+++ b/js/templates/treatment.tpl.html
@@ -257,18 +257,43 @@
                          permission-to-edit="dc.permissionToEdit"
                          warning="dc.warning">
         </treatment-entry>
-        <li class="list-group-item"
-            ng-show="(treatment.focused || select2Open || treatment.new) && dc.permissionToEdit">
+        <li class="list-group-item type-and-preset" type-and-preset ng-show="(treatment.focused || treatment.new) && dc.permissionToEdit">
             <div class="row">
-                <div class="col-xs-12 type-select">
-                    <select2 placeholder="Neuer Behandlungstitel (F9)"
-                             class="form-control"
-                             ng-change="dc.addEntry(treatment.id, dc.newEntry.type, treatment.entries); dc.newEntry = {}"
-                             ng-model="dc.newEntry.type"
-                             ng-options="type as type.name group by type.name.substr(0,1) for type in dc.types track by type.id"></select2>
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <input class="form-control type-and-preset-search" placeholder="Neuer Behandlungstitel (F9)" ng-model="search.term">
+                    </div>
+                    <div class="list-group type-and-preset-list" ng-show="active">
+                        <a tabindex href
+                           ng-click="dc.addEntry(treatment.id, type, treatment.entries); search.term=''"
+                           ng-repeat="type in dc.types | filter:search.term"
+                           class="list-group-item entry-type">
+                            {{type.name}}
+                        </a>
+                        <hr>
+                        <a tabindex href
+                           class="list-group-item preset"
+                           ng-click="dc.addPreset(treatment.id, preset, treatments); search.term=''"
+                           ng-repeat="preset in dc.presets | filter:search.term">
+                            {{preset.name}}
+                        </a>
+                    </div>
                 </div>
             </div>
         </li>
+
+        <!--<li class="list-group-item"-->
+            <!--ng-show="(treatment.focused || select2Open || treatment.new) && dc.permissionToEdit">-->
+            <!--<div class="row">-->
+                <!--<div class="col-xs-12 type-select">-->
+                    <!--<select2 placeholder="Neuer Behandlungstitel (F9)"-->
+                             <!--class="form-control"-->
+                             <!--ng-change="dc.addEntry(treatment.id, dc.newEntry.type, treatment.entries); dc.newEntry = {}"-->
+                             <!--ng-model="dc.newEntry.type"-->
+                             <!--ng-options="type as type.name group by type.name.substr(0,1) for type in dc.types track by type.id"></select2>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</li>-->
     </ul>
 </div>
 </div>
