--- a/css/custom.css
+++ b/css/custom.css
@@ -643,6 +643,15 @@ p:last-child {
     position: relative;
 }
 
+.type-and-preset-list {
+    position: absolute;
+    /*padding-right: 15px;*/
+    /*padding-left: 15px;*/
+    width: 100%;
+    z-index: 90;
+    background-color: white;
+}
+
 .type-and-preset-list hr{
     margin-top: 4px;
     margin-bottom: 4px;
@@ -654,6 +663,14 @@ p:last-child {
     color: white;
     background-color: #337ab7;
     outline: 0;
+}
+
+.list-group-row {
+    width: 100%;
+}
+
+h5.list-group-item {
+    margin-top: 3px;
 }
 
 h5.list-group-item.entry-type {
@@ -671,7 +688,7 @@ h5.list-group-item.preset {
 .catalog-list {
     position: absolute;
     top: 30px;
-    z-index: 9;
+    z-index: 99;
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
