--- a/js/templates/treatment-entry.tpl.html
+++ b/js/templates/treatment-entry.tpl.html
@@ -36,11 +36,11 @@
                                       readonly="column.readonly || !permissionToEdit()" row="row"></treatment-column>
                     <div class="catalog-list list-group" ng-if="dc.catalog.entries.length && dc.catalog.id == row.id && dc.showCatalog">
                         <a class="list-group-item"
-                           href ng-click="dc.chooseCatalogEntry(catalogEntry)"
+                           href ng-click="dc.chooseCatalogEntry(catalogEntry, row)"
                            ng-repeat="catalogEntry in dc.catalog.entries"
                            >
                             <div class="row">
-                                <div ng-repeat="column in catalogEntry.cols" ng-class="'col-xs-' + column.width ">{{column.content}}</div>
+                                <div ng-repeat="column in catalogEntry.cols" ng-class="'col-xs-' + column.width " ng-bind-html="column.trustedContent"></div>
                             </div>
                         </a>
 
