--- a/js/templates/treatment-entry.tpl.html
+++ b/js/templates/treatment-entry.tpl.html
@@ -24,7 +24,9 @@
         </div>
         <div class="col-xs-8 col-sm-9 col-lg-10">
             <form name="entryform">
-                <div class="row treatment-row" treatment-row ng-repeat="row in entry.rows | orderBy:'id'"
+                <div
+                        keyboard-focus focusable=".catalog-entry" active="{{dc.catalog.entries.length && dc.catalog.id == row.id && dc.showCatalog}}"
+                        class="row treatment-row" treatment-row ng-repeat="row in entry.rows | orderBy:'id'"
                      ng-class="{locked: row.locked}" ng-hide="row.deleted">
                     <span class="label locked-warning" ng-class="'mandator-' + row.lockedBy.id + '-warning'"
                           ng-show="row.locked">Gesperrt von {{row.lockedBy.name}}</span>
@@ -35,7 +37,7 @@
                                       type="entry.type" entry="entry"
                                       readonly="column.readonly || !permissionToEdit()" row="row"></treatment-column>
                     <div class="catalog-list list-group" ng-if="dc.catalog.entries.length && dc.catalog.id == row.id && dc.showCatalog">
-                        <a class="list-group-item"
+                        <a class="list-group-item catalog-entry"
                            href ng-click="dc.chooseCatalogEntry(catalogEntry, row)"
                            ng-repeat="catalogEntry in dc.catalog.entries"
                            >
