some refactoring, also some dropdown styling

--- a/js/templates/treatment-entry.tpl.html
+++ b/js/templates/treatment-entry.tpl.html
@@ -36,17 +36,20 @@
                                       editable="{{editable}}" treatment="treatment" warning="warning"
                                       type="entry.type" entry="entry"
                                       readonly="column.readonly || !permissionToEdit()" row="row"></treatment-column>
-                    <div class="catalog-list list-group" ng-if="dc.catalog.entries.length && dc.catalog.id == row.id && dc.showCatalog">
-                        <a class="list-group-item catalog-entry"
-                           href ng-click="dc.chooseCatalogEntry(catalogEntry, row)"
-                           ng-repeat="catalogEntry in dc.catalog.entries"
-                           >
-                            <div class="row">
-                                <div ng-repeat="column in catalogEntry.cols" ng-class="'col-xs-' + column.width " ng-bind-html="column.trustedContent"></div>
-                            </div>
-                        </a>
+                    <div class="catalog-list" ng-if="dc.catalog.entries.length && dc.catalog.id == row.id && dc.showCatalog">
+                        <div class="list-group">
+                            <a class="list-group-item catalog-entry"
+                               href ng-click="dc.chooseCatalogEntry(catalogEntry, row)"
+                               ng-repeat="catalogEntry in dc.catalog.entries"
+                                    >
+                                <div class="row">
+                                    <div ng-repeat="column in catalogEntry.cols" ng-class="'col-xs-' + column.width " ng-bind-html="column.trustedContent"></div>
+                                </div>
+                            </a>
 
+                        </div>
                     </div>
+
                 </div>
             </form>
         </div>
