--- a/css/custom.css
+++ b/css/custom.css
@@ -671,7 +671,10 @@ a.focused
     outline: 0;
 }
 
-
+.type-and-preset-list > .list-group{
+    max-height: 400px;
+    overflow-y: scroll;
+}
 
 .list-group-row {
     width: 100%;
@@ -698,6 +701,32 @@ h5.list-group-item.preset {
     top: 30px;
     z-index: 99;
     width: 100%;
-    padding-right: 15px;
     padding-left: 15px;
+    padding-right: 15px;
+}
+
+.catalog-list > .list-group{
+    max-height: 400px;
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+    width: 4px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 3px;
+    background: rgba(100,100,100,0.6);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+    background: rgba(100,100,100,0.4);
 }
