--- a/js/templates/treatment.tpl.html
+++ b/js/templates/treatment.tpl.html
@@ -267,22 +267,24 @@
                     </div>
                     <div class="row list-group-row">
                         <div class="col-xs-12">
-                            <div class="list-group type-and-preset-list" ng-show="active">
-                                <h5 class="list-group-item entry-type">Typen</h5>
-                                <a tabindex href
-                                   ng-click="dc.addEntry(treatment.id, type, treatment.entries); search.term=''"
-                                   ng-repeat="type in dc.types | filter:search.term"
-                                   class="list-group-item entry-type">
-                                    {{type.name}}
-                                </a>
-                                <hr>
-                                <h5 class="list-group-item preset">Strukturen</h5>
-                                <a tabindex href
-                                   class="list-group-item preset"
-                                   ng-click="dc.addPreset(treatment.id, preset, treatments); search.term=''"
-                                   ng-repeat="preset in dc.presets | filter:search.term">
-                                    {{preset.name}}
-                                </a>
+                            <div class="type-and-preset-list" ng-show="active">
+                                <div class="list-group">
+                                    <h5 class="list-group-item entry-type">Typen</h5>
+                                    <a tabindex href
+                                       ng-click="dc.addEntry(treatment.id, type, treatment.entries); search.term=''"
+                                       ng-repeat="type in dc.types | filter:search.term"
+                                       class="list-group-item entry-type">
+                                        {{type.name}}
+                                    </a>
+                                    <hr>
+                                    <h5 class="list-group-item preset">Strukturen</h5>
+                                    <a tabindex href
+                                       class="list-group-item preset"
+                                       ng-click="dc.addPreset(treatment.id, preset, treatments); search.term=''"
+                                       ng-repeat="preset in dc.presets | filter:search.term">
+                                        {{preset.name}}
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
