--- a/js/templates/advanced-search-widget.tpl.html
+++ b/js/templates/advanced-search-widget.tpl.html
@@ -8,37 +8,111 @@
             </div>
         </div>
         <div class="panel-body">
-            <div class="form-group">
-                <label class="control-label">Volltextsuche</label>
-                <input ng-model="search.text" ng-model-options="{ updateOn: 'default blur', debounce: { 'default': 500, 'blur': 0 } }" class="form-control">
-            </div>
             <div class="row">
-                <div class="col-xs-6">
+                <div class="col-sm-6">
                     <div class="form-group">
-                        <label class="control-label">Datum von</label>
+                        <label class="control-label">Volltextsuche</label>
+                        <input ng-model="search.text"
+                               ng-model-options="{ updateOn: 'default blur', debounce: { 'default': 500, 'blur': 0 } }"
+                               class="form-control">
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <div class="form-group">
+                                <label class="control-label">Datum von</label>
 
-                        <div class="input-group">
-                            <input datepicker-popup="dd.MM.yyyy" is-open="dc.fromOpened" ng-model="search.dateFrom"
-                                   class="form-control">
+                                <div class="input-group">
+                                    <input datepicker-popup="dd.MM.yyyy" is-open="dc.fromOpened" ng-model="search.dateFrom"
+                                           class="form-control">
                         <span class="input-group-btn">
                             <button type="button" class="btn btn-default" ng-click="dc.openFromDatepicker($event)"><i
                                     class="glyphicon glyphicon-calendar"></i></button>
                         </span>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-xs-6">
-                    <div class="form-group">
-                        <label class="control-label">Datum bis</label>
+                        <div class="col-xs-6">
+                            <div class="form-group">
+                                <label class="control-label">Datum bis</label>
 
-                        <div class="input-group">
+                                <div class="input-group">
 
-                            <input ng-model="search.dateTo" datepicker-popup="dd.MM.yyyy" is-open="dc.toOpened"
-                                   ng-model-options="{updateOn: 'blur'}" class="form-control">
+                                    <input ng-model="search.dateTo" datepicker-popup="dd.MM.yyyy" is-open="dc.toOpened"
+                                           class="form-control">
                         <span class="input-group-btn">
                             <button type="button" class="btn btn-default" ng-click="dc.openToDatepicker($event)"><i
                                     class="glyphicon glyphicon-calendar"></i></button>
                         </span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="form-group">
+                                <label class="control-label">Nur Einträge mit</label>
+
+                                <div class="checkbox">
+                                    <input type="checkbox" id="medi-list-checkbox"
+                                           ng-model="search.attachments.medication">
+                                    <label for="medi-list-checkbox">
+                                        Medi-Listen
+                                    </label>
+                                </div>
+
+                                <div class="checkbox">
+                                    <input type="checkbox" id="laboratory-checkbox"
+                                            ng-model="search.attachments.laboratory">
+                                    <label for="laboratory-checkbox">
+                                        Labor
+                                    </label>
+                                </div>
+                                <div class="checkbox">
+                                    <input type="checkbox" id="service-checkbox"
+                                            ng-model="search.attachments.service">
+                                    <label for="service-checkbox">
+                                        Leistungen
+                                    </label>
+                                </div>
+                                <div class="checkbox">
+                                    <input type="checkbox" id="disability-checkbox"
+                                            ng-model="search.attachments.disability">
+                                    <label for="disability-checkbox">
+                                        Arbeitsunfähigkeit
+                                    </label>
+                                </div>
+                                <div class="checkbox">
+                                    <input type="checkbox" id="biometric-checkbox"
+                                            ng-model="search.attachments.biometric">
+                                    <label for="biometric-checkbox">
+                                        Biometrische Daten
+                                    </label>
+                                </div>
+
+                                <div class="checkbox">
+                                    <input type="checkbox" id="document-checkbox"
+                                            ng-model="search.attachments.document">
+                                    <label for="document-checkbox">
+                                        Briefe & Dokumente
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="pull-right">
+                        <div class="btn-group">
+                            <a href class="btn btn-danger" ng-click="dc.clearSearch(search)"><i
+                                    class="fa fa-remove"></i> Zurücksetzen</a>
                         </div>
                     </div>
                 </div>
