--- a/css/custom.css
+++ b/css/custom.css
@@ -741,3 +741,8 @@ h5.list-group-item.preset {
 ::-webkit-scrollbar-thumb:window-inactive {
     background: rgba(100,100,100,0.4);
 }
+
+.treatment-column {
+    padding-left: 3px;
+    padding-right: 3px;
+}
